--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,19 @@
 {% load static  %}
-<!doctype html>
+<!DOCTYPE html>
+<html>
 <head>
     <title>Blogs</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
     <header>
-        <h1><a href="{% url 'home' %}">Django Blog</a></h1>
+        <div class="nav-left">
+            <h1><a href="{% url 'home' %}">Django Blog</a></h1>
+        </div>
+        <div class = "nav-right">
+            <a href = "{% url 'post_new' %}">New Blog Post</a>
+        </div>
+
     </header>
     <div>
             {% block content  %}
@@ -14,3 +21,4 @@
     </div>
    
 </body>
+</html>
