--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -5,7 +5,21 @@
         <h2>{{post.title}}</h2>
         <p>{{post.body}}</p>
     </div>
-    <a href="{% url 'post_edit' post.pk %}">Edit Blog Post</a>
-    <a href="{% url 'post_delete' post.pk %}">Delete Post</a>
+    {% if request.user == post.author %}
+        <a href="{% url 'post_edit' post.pk %}">Edit Blog Post</a>
+        <a href="{% url 'post_delete' post.pk %}">Delete Post</a>
+    {% endif %}
+
+    <hr>
+    {% for comment in post.comments.all %}
+        <div class="comment">
+            <div class="date">{{ comment.created_date }}</div>
+            <strong>{{ comment.name }}</strong>
+            <p>{{ comment.body|linebreaks }}</p>
+        </div>
+    {% empty %}
+        <p>No comments here yet :(</p>
+    {% endfor %}
+    <a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
 
 {% endblock %}
