--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,44 +1,68 @@
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 18px;
+    background-color: #eeeeee;
+    margin: 0;
 }
 
 header {
-    border-bottom: 1px solid #999;
     margin-bottom: 2rem;
     display: flex;
+    background-color: #000035;
+    padding-left: 16px;
 }
 
 
-header h1 a {
-    color: red;
+header h2 a {
+    color: white;
     text-decoration: none;
 }
 
+body>div>h1 {
+    margin: 0 6rem;
+}
 
 .nav-left {
-    margin-right: auto; 
+    width: 30%;
 }
 
 
 .nav-right {
     display: flex;
-    padding-top: 16px;
+    padding-top: 5px;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
+    width: 70%;
+    padding-right: 1%;
 }
-
-
 .logged_in_nav {
     display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 .logged_in_nav p {
-    margin-right: 20px;
+    margin-right: 10px;
+    word-wrap: unset;
 }
 
+.logged_in_nav p a{
+    text-decoration: none;
+    color: wheat;
+}
+
+.vl{
+    height: 40%;
+    border-left: 2px solid gray;
+    margin-right: 6px;
+}
 .post-entry {
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
+    background-color: white;
+    border-radius: 5px;
+    margin: 1rem 6rem;
+    padding: 1rem 2rem;
 }
 
 .post-entry h2 {
@@ -49,19 +73,36 @@ header h1 a {
 
 .post-entry h2 a,
 .post-entry h2 a:visited {
-    color: blue;
+    color: #000035;
     text-decoration: none;
 }
 
+.post-entry>div {
+    text-align: end;
+    
+}
+.post-entry div a {
+    border: 1px solid wheat;
+    padding: 0.5% 2%;
+    text-decoration: none;
+}
 .post-entry p{
     margin: 0;
     font-weight: 400;
 }
 
 .post-entry h2 a:hover {
-    color: red;
+    text-decoration: underline;
 }
 
 .comment {
     margin: 20px 0px 20px 20px;
 }
+
+.outline-btn {
+    border: 1px solid #e0e0e0;
+    padding: 0.5% 2%;
+    
+}
+
+
