--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -20,6 +20,11 @@
     {% empty %}
         <p>No comments here yet :(</p>
     {% endfor %}
-    <a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
+    {% if request.user.is_authenticated%}
+        <a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
+    {% else %}
+        <a class="btn btn-default" href="{% url 'login'%}">Login to comment</a>
 
+    {% endif %}
+    
 {% endblock %}
