--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -6,25 +6,29 @@
         <p>{{post.body}}</p>
     </div>
     {% if request.user == post.author %}
+    <div class = "post-action">
         <a href="{% url 'post_edit' post.pk %}">Edit Blog Post</a>
         <a href="{% url 'post_delete' post.pk %}">Delete Post</a>
+    </div>
+        
     {% endif %}
 
-    <hr>
-    {% for comment in post.comments.all %}
-        <div class="comment">
-            <div class="date">{{ comment.created_date }}</div>
-            <strong>{{ comment.name }}</strong>
-            <p>{{ comment.body|linebreaks }}</p>
-        </div>
-    {% empty %}
-        <p>No comments here yet :(</p>
-    {% endfor %}
-    {% if request.user.is_authenticated%}
-        <a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
-    {% else %}
-        <a class="btn btn-default" href="{% url 'login'%}">Login to comment</a>
-
-    {% endif %}
+    <div class="comments">
+        <h3>Comments</h3>    
+        {% for comment in post.comments.all %}
+            <div class="comment">
+                <div><p>{{ comment.body }}</p></div>
+                <strong>{{ comment.name }}</strong>
+                <div>{{ comment.created_date }}</div>         
+            </div>
+        {% empty %}
+            <p>No comments here yet :(</p>
+        {% endfor %}
+        {% if request.user.is_authenticated%}
+            <div><a class = "comments-action" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a></div>
+        {% else %}
+            <div><a class = "comments-action" href="{% url 'login'%}">Login to comment</a></div>
+        {% endif %}
+    </div>
     
 {% endblock %}
