--- a/templates/post_new.html
+++ b/templates/post_new.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 
-{% block content %}
-    <h1>New Post</h1>
-    <form action="" method="post">
+{% block content %} 
+    <div class = "forms">
+        <h3>New Post</h3>
+        <form action="" method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Save">
-    </form>
+            {{ form.as_p }}
+            <input type="submit" value="Save">
+        </form>
+    
 {% endblock %}
 
